<resources>
    <string name="app_name">小说神器</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_qq">加入反馈qq群</string>
    <string name="bookrack">书架</string>
    <string name="bookstore">书城</string>
    <string name="setting">设置</string>
    <string name="blame_off">免责声明</string>
    <string name="check_update">检查更新</string>
    <string name="fix_easybook">解析修复</string>
    <string name="join_qq_group">加入反馈QQ群</string>
    <string name="search">搜索</string>
    <string name="loading">加载中...</string>
    <string name="cover">封面</string>
    <string name="no_1">NO.1</string>
    <string name="retry">点击重试</string>
    <string name="recommend">猜你喜欢</string>
    <string name="search_history">搜索历史</string>
    <string name="shuffle">换一换</string>
    <string name="delete_all">全部删除</string>
    <string name="next_chapter">下一章</string>
    <string name="download">下载</string>
    <string name="continue_read">继续阅读</string>
    <string name="insert_bookrack">加入书架</string>
    <string name="anim_way">翻页方式：</string>
    <string name="slide">滑动</string>
    <string name="tocover">覆盖</string>
    <string name="sim">模拟</string>
    <string name="catalog">目录</string>
    <string name="cache">缓存</string>
    <string name="more">更多</string>
    <string name="system">系统</string>
    <string name="none">无</string>
    <string name="font_style">字体</string>
    <string name="custom_site">在线书源</string>
    <string name="custom_switch_all">全部开启</string>
    <string name="custom_siteManage">全部开/关</string>
    <string name="custom_url">http://zzzia.net/easybook.json</string>
    <string name="font_default">默认</string>
    <string name="keep_screen_on">屏幕常亮</string>
    <string name="setting_read_config">阅读主题设置</string>
    <string name="config">设置</string>
    <string name="choose">选择</string>
    <string name="text_color">文字颜色</string>
    <string name="bg_color">背景颜色</string>
    <string name="bg_img">图片背景</string>
    <string name="preview_text_demo">　　“斗之力，三段！”\n　　望着测验魔石碑上面闪亮得甚至有些刺眼的五个大字，少年面无表情，唇角有着一抹自嘲，紧握的手掌，因为大力，而导致略微尖锐的指甲深深的刺进了掌心之中，带来一阵阵钻心的疼痛…</string>
    <string name="no_path">未选择路径</string>
    <string name="preview">预览</string>
    <string name="custom">自定义</string>
    <string name="custom_bg_color_des">可单独设置纯色背景\n设置图片背景时电池无法取色时的背景颜色</string>
    <string name="always_next">连续翻页</string>
</resources>
