<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zia.page.setting.SettingFragment">

    <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/blame_off"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/setting_blame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/check_update"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_checkApp" />

    <TextView
            android:id="@+id/setting_appVersion_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_checkApp"
            tools:text="v1.4" />

    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/fix_easybook"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkFix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_checkFix" />

    <TextView
            android:id="@+id/setting_fixVersion_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkFix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_checkFix"
            tools:text="v2.42" />

    <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/join_qq_group"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/setting_joinQQ"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_joinQQ" />

    <TextView
            android:id="@+id/setting_customSite_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/custom_site"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/setting_customSite"
            app:layout_constraintStart_toStartOf="@+id/setting_customSite"
            app:layout_constraintTop_toTopOf="@+id/setting_customSite" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/setting_read_config"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/setting_customTheme"
            app:layout_constraintStart_toStartOf="@+id/setting_customTheme"
            app:layout_constraintTop_toTopOf="@+id/setting_customTheme" />

    <View
            android:id="@+id/setting_blame"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

    <View
            android:id="@+id/setting_checkApp"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_blame" />

    <View
            android:id="@+id/setting_checkFix"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_checkApp" />

    <View
            android:id="@+id/setting_customSite"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_checkFix" />

    <View
            android:id="@+id/setting_joinQQ"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_customSite" />

    <View
            android:id="@+id/setting_customTheme"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decor4" />

    <View
            android:id="@+id/decor1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/setting_checkApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/decor2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/setting_checkFix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/docor3"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkFix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/docor5"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/setting_joinQQ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_joinQQ" />

    <View
            android:id="@+id/decor4"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/setting_joinQQ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/decor6"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/setting_customTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/setting_appVersion_alert"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/red"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/setting_checkApp"
            app:layout_constraintTop_toTopOf="@+id/setting_checkApp" />

    <View
            android:id="@+id/setting_customSite_alert"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/red"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/setting_customSite"
            app:layout_constraintTop_toTopOf="@+id/setting_customSite" />

    <View
            android:id="@+id/setting_fixVersion_alert"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/red"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/setting_checkFix"
            app:layout_constraintTop_toTopOf="@+id/setting_checkFix" />
</androidx.constraintlayout.widget.ConstraintLayout>
